--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #355EFC;
+    --primary:	#ff9a00;
     --secondary: #E93C05;
     --tertiary: #555555;
     --light: #DFE4FD;
@@ -122,7 +122,7 @@ h6,
 
 .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link.active {
-    color: var(--primary);
+    color: 	#ff9a00
 }
 
 @media (max-width: 991.98px) {
@@ -267,8 +267,8 @@ h6,
 }
 
 .service .nav .nav-link.active {
-    border-color: var(--primary) !important;
-    background: var(--primary);
+    border-color:	#ff9a00 !important;
+    background: 	#ff9a00;
 }
 
 .service .nav .nav-link.active h5 {
@@ -540,4 +540,82 @@ h6,
 
 .copyright a:hover {
     color: var(--primary);
+}
+@import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500);
+.service-11 {
+  font-family: "Montserrat", sans-serif;
+	color: #8d97ad;
+  font-weight: 300;
+}
+
+.service-11 h1, .service-11 h2, .service-11 h3, .service-11 h4, .service-11 h5, .service-11 h6 {
+  color: #3e4555;
+}
+
+.service-11 .font-weight-medium {
+	font-weight: 500;
+}
+
+.service-11 .bg-light {
+    background-color: #f4f8fa !important;
+}
+
+.service-11 .subtitle {
+    color: #8d97ad;
+    line-height: 24px;
+}
+
+.service-11 .card.card-shadow {
+    -webkit-box-shadow: 0px 0px 30px rgba(115, 128, 157, 0.1);
+    box-shadow: 0px 0px 30px rgba(115, 128, 157, 0.1);
+}
+
+.service-11 .wrap-service11-box {
+  margin-top: 60px;
+}
+
+.service-11 .wrap-service11-box .icon-space {
+  margin: -70px 0 20px;
+}
+
+.service-11 .wrap-service11-box .icon-space .icon-round {
+  font-size: 45px;
+  color: #ffffff;
+}
+
+.service-11 .bg-success-gradiant {
+    background: #ff9a00;
+    background: -webkit-linear-gradient(legacy-direction(to right), #ff9a00 0%,#ff7400 100%);
+    background: -webkit-gradient(linear, left top, right top, from(#ff9a00), to(#ff7400));
+    background: -webkit-linear-gradient(left, #ff9a00 0%,#ff7400 100%);
+    background: -o-linear-gradient(left, #ff9a00 0%,#ff7400 100%);
+    background: linear-gradient(to right, #ff9a00 0%,#ff7400 100%);
+}
+
+.service-11 .icon-round {
+		width: 80px;
+    line-height: 80px;
+}
+
+.service-11 .btn-success-gradiant {
+		background: #ff9a00;
+    background: -webkit-linear-gradient(legacy-direction(to right), #ff9a00 0%,#ff7400 100%);
+    background: -webkit-gradient(linear, left top, right top, from(#ff9a00), to(#ff7400));
+    background: -webkit-linear-gradient(left, #ff9a00 0%,#ff7400 100%);
+    background: -o-linear-gradient(left, #ff9a00 0%,#ff7400 100%);
+    background: linear-gradient(to right, #ff9a00 0%,#ff7400 100%);
+}
+
+.service-11 .btn-success-gradiant:hover {
+		background:#ff7400;
+    background: -webkit-linear-gradient(legacy-direction(to right),#ff7400 0%, #ff9a00 100%);
+    background: -webkit-gradient(linear, left top, right top, from(#ff7400), to(#ff9a00));
+    background: -webkit-linear-gradient(left,#ff7400 0%, #ff9a00 100%);
+    background: -o-linear-gradient(left,#ff7400 0%, #ff9a00 100%);
+    background: linear-gradient(to right,#ff7400 0%, #ff9a00 100%);	
+}
+
+.service-11 .btn-md {
+    padding: 15px 45px;
+    font-size: 16px;
 }
